--- a/src/global_styling/variables/_typography.scss
+++ b/src/global_styling/variables/_typography.scss
@@ -56,6 +56,9 @@ $ouiFontSizeL:      $ouiFontSize * nth($ouiTextScale, 3) !default; // 20px
 $ouiFontSizeXL:     $ouiFontSize * nth($ouiTextScale, 2) !default; // 28px
 $ouiFontSizeXXL:    $ouiFontSize * nth($ouiTextScale, 1) !default; // 36px
 
+// This value is impacted by font-size
+$ouiLegibilityMaxWidth: 80ch !default;
+
 // Line height
 $ouiLineHeight:     1.5 !default;
 $ouiBodyLineHeight: 1 !default;
@@ -122,6 +125,7 @@ $euiFontSizeM: $ouiFontSizeM;
 $euiFontSizeL: $ouiFontSizeL;
 $euiFontSizeXL: $ouiFontSizeXL;
 $euiFontSizeXXL: $ouiFontSizeXXL;
+$euiLegibilityMaxWidth: $ouiLegibilityMaxWidth;
 $euiLineHeight: $ouiLineHeight;
 $euiBodyLineHeight: $ouiBodyLineHeight;
 $euiFontWeightLight: $ouiFontWeightLight;
