Allow controlling the gap between the icon and the content of OuiButton and OuiButtonEmpty
Signed-off-by: Miki <miki@amazon.com>

--- a/src/global_styling/variables/_size.scss
+++ b/src/global_styling/variables/_size.scss
@@ -11,6 +11,7 @@
 
 $ouiSize:     16px !default;
 
+$ouiSizeXXS:   $ouiSize * .125 !default;
 $ouiSizeXS:   $ouiSize * .25 !default;
 $ouiSizeS:    $ouiSize * .5 !default;
 $ouiSizeM:    $ouiSize * .75 !default;
