--- a/src/themes/oui-next/global_styling/variables/_size.scss
+++ b/src/themes/oui-next/global_styling/variables/_size.scss
@@ -11,6 +11,7 @@
 
 $ouiSize:     16px !default;
 
+$ouiSizeXXS:   $ouiSize * .125 !default;
 $ouiSizeXS:   $ouiSize * .25 !default;
 $ouiSizeS:    $ouiSize * .5 !default;
 $ouiSizeM:    $ouiSize * .75 !default;
