--- a/src/components/form/form_control_layout/_form_control_layout.scss
+++ b/src/components/form/form_control_layout/_form_control_layout.scss
@@ -141,7 +141,7 @@
   .ouiText {
     background-color: $ouiFormInputGroupLabelBackground;
     padding: $ouiFormControlPadding;
-    line-height: $ouiSize !important;
+    line-height: calc($ouiSize - 2px) !important;
     cursor: default !important; // pointer cursor on some form labels but not others is confusing
 
     // If the next sibling is not the input, pull it closer to the text to reduce space
