fix: update v9 light primary color
Signed-off-by: Viraj Sanghvi <virajs@amazon.com>

--- a/src/themes/v9/global_styling/variables/_colors.scss
+++ b/src/themes/v9/global_styling/variables/_colors.scss
@@ -17,7 +17,7 @@ $ouiColorGhost: #FFFFFF !default;
 $ouiColorInk: #131313 !default;
 
 // Core
-$ouiColorPrimary: #003B5C !default;
+$ouiColorPrimary: #1D70C0 !default;
 $ouiColorSecondary: #199863 !default;
 $ouiColorAccent: #B92FC5 !default;
 
@@ -52,7 +52,7 @@ $ouiColorAccentText: #B92FC5 !default;
 $ouiColorWarningText: #C48600 !default;
 $ouiColorDangerText: #C84133 !default;
 $ouiColorDisabledText: #AFAFAF !default;
-$ouiColorSuccessText: #0D6453 !default;
+$ouiColorSuccessText: #117F6A !default;
 $ouiLinkColor: $ouiColorPrimaryText !default;
 
 // Visualization colors
