--- a/src/themes/v9/v9_colors_dark.scss
+++ b/src/themes/v9/v9_colors_dark.scss
@@ -47,7 +47,7 @@ $ouiTextSubduedColor: #A0A9B5;
 $ouiColorDisabled: #AFAFAF;
 
 // Contrasty text variants
-$ouiColorPrimaryText: #005EB8;
+$ouiColorPrimaryText: $ouiColorPrimary;
 $ouiColorSecondaryText: #117F6A;
 $ouiColorAccentText: #B92FC5;
 $ouiColorWarningText: #C48600;
