--- a/src/components/breadcrumbs/_breadcrumbs.scss
+++ b/src/components/breadcrumbs/_breadcrumbs.scss
@@ -33,6 +33,16 @@
   }
 }
 
+.ouiBreadcrumb,
+.ouiBreadcrumb__collapsedLink {
+  &.ouiLink {
+    &[class*='ouiLink--']:focus {
+      // .ouiLink uses a rule with !important which shows an outline
+      animation: none !important; // sass-lint:disable-line no-important
+    }
+  }
+}
+
 .ouiBreadcrumbs:not(.ouiBreadcrumbs__inPopover) .ouiBreadcrumbWrapper--last .ouiBreadcrumb {
   font-weight: $ouiFontWeightMedium;
 }
@@ -57,16 +67,6 @@
     text-overflow: ellipsis;
     vertical-align: top; // overflow hidden causes misalignment of links and slashes, this fixes that
   }
-
-  .ouiBreadcrumbWrapper:not(.ouiBreadcrumbWrapper--collapsed) {
-    max-width: $ouiBreadcrumbTruncateWidth;
-    overflow: hidden;
-    text-overflow: ellipsis;
-
-    &.ouiBreadcrumbWrapper--last {
-      max-width: none;
-    }
-  }
 }
 
 .ouiBreadcrumb--truncate {
@@ -83,8 +83,12 @@
 .ouiBreadcrumbWrapper {
   position: relative;
   z-index: 0;
-  padding: $ouiSizeXS - 2.5 $ouiSizeL - $ouiSizeXS;
-  padding-right: $ouiSizeL - $ouiSizeXS + calc($ouiBreadcrumbSpacing / 2);
+
+  $paddingTop: $ouiSizeXS - 2.5;
+  $paddingBottom: $paddingTop;
+  $paddingLeft: $ouiSizeL - $ouiSizeXS;
+  $paddingRight: $paddingLeft + calc($ouiBreadcrumbSpacing / 2);
+  padding: $paddingTop $paddingRight $paddingBottom $paddingLeft;
 
   &::before {
     content: '';
@@ -97,28 +101,53 @@
 
     transform: skewX(-20deg);
     border-radius: $ouiSizeXS;
-  }
 
-  &:not(.ouiBreadcrumbWrapper--last)::before {
     background-color: $ouiBreadcrumbInactiveBackground;
   }
 
-  &.ouiBreadcrumbWrapper--last::before {
-    background-color: $ouiBreadcrumbActiveBackground;
+  .ouiBreadcrumbs--truncate &:not(.ouiBreadcrumbWrapper--collapsed) {
+    max-width: $ouiBreadcrumbTruncateWidth;
+    // At least one letter + ellipsis but add 1ch because 1ch for each might not be enough
+    min-width: calc(3ch + $paddingLeft + $paddingRight);
+    overflow: hidden;
+    text-overflow: ellipsis;
+
+    &.ouiBreadcrumbWrapper--last {
+      max-width: none;
+    }
+  }
+
+  .ouiBreadcrumbWall:has(&:not(.ouiBreadcrumbWrapper--collapsed)) {
+    min-width: calc(3ch + $paddingLeft + $paddingRight);
+  }
+
+  .ouiBreadcrumbs:not(.ouiBreadcrumbs__inPopover) & {
+    &.ouiBreadcrumbWrapper--last {
+      // This targets the last breadcrumb wrapper and sets a different text color for the breadcrumb inside it.
+      .ouiBreadcrumb,
+      .ouiBreadcrumb:hover {
+        color: inherit !important; // sass-lint:disable-line no-important
+      }
+
+      &::before {
+        background-color: $ouiBreadcrumbActiveBackground;
+      }
+    }
+  }
+
+  &:has(.ouiLink--subdued:focus)::before {
+    background-color: $ouiBreadcrumbFocusBackground;
   }
 
   &:not(.ouiBreadcrumbWrapper--first) {
     margin-bottom: $ouiSizeXS; /* 1 */
-    padding-left: $ouiSizeL - $ouiSizeXS + calc($ouiBreadcrumbSpacing / 2);
-  }
 
-  // This targets the last breadcrumb wrapper and sets a different text color for the breadcrumb inside it.
-  &.ouiBreadcrumbWrapper--last .ouiBreadcrumb {
-    // TODO: remove important: https://github.com/opensearch-project/oui/issues/376
-    color: inherit !important; // sass-lint:disable-line no-important
+    $paddingLeft: $paddingRight;
+    padding-left: $paddingLeft;
 
-    &:hover {
-      color: inherit !important; // sass-lint:disable-line no-important
+    .ouiBreadcrumbs--truncate &:not(.ouiBreadcrumbWrapper--collapsed) {
+      // At least one letter + ellipsis but add 1ch because 1ch for each might not be enough
+      min-width: calc(3ch + $paddingLeft + $paddingRight);
     }
   }
 }
@@ -128,6 +157,10 @@
   border-radius: $ouiSizeXS;
   overflow: hidden;
   margin-bottom: $ouiSizeXS; /* 1 */
+
+  &:has(.ouiLink--subdued:focus) {
+    background-image: linear-gradient(to right, $ouiBreadcrumbFocusBackground 0 $ouiSizeM, transparent $ouiSizeM);
+  }
 }
 
 .ouiBreadcrumbWall--single {
