--- a/src/components/page/page_header/_page_header_content.scss
+++ b/src/components/page/page_header/_page_header_content.scss
@@ -13,7 +13,7 @@
   width: 100%;
 }
 
-@include ouiBreakpoint('m', 'l', 'xl') {
+@include ouiBreakpoint('m', 'l', 'xl', 'xxl', 'xxxl') {
   .ouiPageHeaderContent__rightSideItems {
     flex-direction: row-reverse;
   }
