fix: Update components to respect new breakpoints (#1416)
* fix: Update components to respect new breakpoints

Signed-off-by: Viraj Sanghvi <virajs@amazon.com>

* revert i18ntokens.json

Signed-off-by: Viraj Sanghvi <virajs@amazon.com>

---------

Signed-off-by: Viraj Sanghvi <virajs@amazon.com>
(cherry picked from commit 5484bcc1fd9e6ee5e9b2160196f1ea6808095b3e)

--- a/src/components/page/page_header/_page_header_content.scss
+++ b/src/components/page/page_header/_page_header_content.scss
@@ -19,7 +19,7 @@
   margin-right: $ouiSize;
 }
 
-@include ouiBreakpoint('m', 'l', 'xl') {
+@include ouiBreakpoint('m', 'l', 'xl', 'xxl', 'xxxl') {
   .ouiPageHeaderContent__rightSideItems {
     flex-direction: row-reverse;
   }
